# agx_fleet_client

./: Dockerfile  README.md  docker_setup.sh  setup.bash
agx_fleet_client_bringup/: CMakeLists.txt  package.xml
agx_fleet_client_bringup/config/: battery.yaml  pub_battery.sh
agx_fleet_client_bringup/launch/: agx_fleet_client.launch  fake_client.launch  simulation_fleet_client.launch
agx_fleet_client_bringup/maps/: company.pgm
agx_fleet_client_bringup/rviz/: multi_turtlebot3_ff.rviz
agx_fleet_client_ros1/: CMakeLists.txt  package.xml
agx_fleet_client_ros1/src/: ClientNode.cpp  ClientNode.hpp  ClientNodeConfig.cpp  ClientNodeConfig.hpp  main.cpp
agx_fleet_client_sim/: CMakeLists.txt  package.xml
agx_fleet_client_sim/config/: battery.yaml
agx_fleet_client_sim/include/scout_base/: scout_messenger.hpp  scout_params.hpp
agx_fleet_client_sim/launch/: company_simulation_fleet_client.launch  simulation_fleet_client copy.launch  simulation_fleet_client.launch  turtlebot3_world_ff.launch
agx_fleet_client_sim/launch/include/: rmf_test_world.launch  single_tb3_all_sim.launch  single_tb3_gazebo_sim.launch  single_tb3_move_base.launch  single_tb3_nav_sim.launch  single_turtlebot3_ff.launch  single_turtlebot3_sim.launch
agx_fleet_client_sim/maps/: company.yaml  office.yaml
agx_fleet_client_sim/param/: costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml
agx_fleet_client_sim/rviz/: multi_turtlebot3_ff.rviz
agx_fleet_client_sim/src/: scout_base_node.cpp  scout_messenger.cpp
agx_fleet_client_sim/worlds/: empty.world
